# ArchitectureDemo

./: .gitignore  A_CONVENTIONS.md  A_LIBRARY.md  A_SLIMMING.md  A_SPEED_UP_BUILD.md  CONVENTIONS.md  LIBRARY.md  PERFORMANCE.md  README.md  SLIMMING.md  bintrayUpload.gradle  build.gradle  cc-settings-2.gradle  cc-settings.gradle  configureLibrary.gradle  configureModule.gradle  configureVersions.gradle  configureVersions2.gradle  googleStyle.xml  gradle.properties  index.js  init.gradle  itotemHunbohui.keystore  library.md  libraryConfigure.gradle  moduleConfigure.gradle  package.json  pluginBintrayUpload.gradle  publish_aar_local.py  publish_aar_romote.py  react-native.config.js  repo_aar.py  settings.gradle  test.gradle  utils.gradle  versions.gradle  versions2.gradle
README/: A_LIBRARY.md  A_PERFORMANCE.md  A_PLUGIN.md  A_SLIMMING.md  AbstractProcessor.md  AndroidStudio插件.md  CONSTRAINTLAYOUT.md  android-三方库.md  android-技术栈.md  android-组件化搭建.md  三方库.md  编译流程tasks.md
app/: build.gradle  channel  proguard-rules.pro  traceconfig.txt
app-loading/: build.gradle  project.properties  traceconfig.txt
app-login/: build.gradle  project.properties
app-main/: build.gradle  proguard-rules.pro
app-mine/: build.gradle  project.properties
app-setting/: build.gradle  project.properties
application/: README.md  build.gradle
buildSrc/: build.gradle.kts
component-service/: README.md  build.gradle  project.properties
flutter_base/: README.md  pubspec.yaml
flutter_integrate/: README.md  pubspec.yaml
flutter_integrate2/: pubspec.yaml
flutter_inv/: README.md  pubspec.yaml
flutter_login/: README.md  pubspec.yaml
flutter_main/: README.md  pubspec.yaml
flutter_middle/: README.md  pubspec.yaml
flutter_setting/: .gitignore  README.md  pubspec.yaml
flutter_ui/: README.md  pubspec.yaml
gradle/: bintrayUpload.gradle  cc-settings-2.gradle  cc-settings-3.gradle  cc-settings.gradle  configApp.gradle  configLibrary.gradle  configModule.gradle  configVersions.gradle  git.gradle  gradleLifecycle.gradle  init.gradle  maven-publish.gradle  novoda-bintray.gradle  pgy.gradle  pgyUpload.gradle  taskTimeTracker.gradle  test.gradle  uploadArchives.gradle  utils.gradle  zipChannel.gradle
inject-gradle-plugin/: build.gradle
lib-base/: README.md  build.gradle  project.properties
lib-base-annotation/: build.gradle
lib-base-api/: build.gradle
lib-base-compiler/: build.gradle  project.properties
lib-base-event/: build.gradle  project.properties
lib-base-mvvm/: build.gradle  project.properties
lib-component-annotation/: build.gradle  project.properties
lib-component-api/: build.gradle  project.properties
lib-component-compiler/: build.gradle  project.properties
lib-image-loader/: README.md  build.gradle  project.properties
lib-image-select/: README.md  build.gradle  project.properties
lib-image-select-ui/: build.gradle
lib-jni-test/: CMakeLists.txt  LEARN.md  README.md  build.gradle
lib-jni-test2/: CMakeLists.txt  README.md  build.gradle
lib-jni-test2/src/main/: AndroidManifest.xml
lib-jni-test2/src/main/java/com/llj/lib/jni/test2/: JniTest2.java
lib-jni-test2/src/main/jni/: helloworld2.cpp
lib-jni-test2/src/main/res/values/: strings.xml
lib-jpeg-turbo/: README.md  build.gradle
lib-jpeg-turbo-utils/: CMakeLists.txt  build.gradle  project.properties
lib-jpeg-turbo-utils/src/main/: AndroidManifest.xml
lib-jpeg-turbo-utils/src/main/java/com/llj/lib/jpeg/turbo/utils/: JpegUtils.java
lib-jpeg-turbo-utils/src/main/jni/: native-lib.cc
lib-jpeg-turbo-utils/src/main/jni/include/: jconfig.h  jconfigint.h  jpeglib.h
lib-jpeg-turbo-utils/src/main/jni/lib/armeabi-v7a/: cjpeg  cjpeg-static  djpeg  djpeg-static  jcstest  jpegtran  jpegtran-static  md5cmp  rdjpgcom  tjbench  tjbench-static  tjexample  tjunittest  tjunittest-static  wrjpgcom
lib-jump-annotation/: build.gradle  project.properties
lib-jump-api/: build.gradle  project.properties
lib-jump-compiler/: README.md  build.gradle  project.properties
lib-kodo/: README.md  build.gradle
lib-map/: README.md  build.gradle
lib-mvp-annotation/: project.properties
lib-mvp-compiler/: build.gradle  project.properties
lib-net/: README.md  build.gradle  project.properties
lib-opencv/: build.gradle
lib-opengl/: README.md  (+1 more)
(+2050 files in other folders)
